<resources>
    <string name="app_name">test-login</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_title">Inicar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="error_email_invalid">"Debe ingresar un correo electrónico válido. "</string>
    <string name="error_password_invalid">Debe ingresar una contraseña válida.</string>
    <string name="loading">Iniciando Sesión...</string>
    <string name="error_login">Error al iniciar sesión.</string>
    <string name="home">Home</string>
    <string name="instructions">*Correo: demo@demo.com y Constraseña: 123456</string>
</resources>